--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-                <li class="nav-item">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
@@ -61,19 +60,16 @@
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Us
                     </a>
-                </li>
-            </ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
+                </li></ul>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
+                    
                     Try It Now!
-                </a>
-            </div>
+                </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">html site templates</a></section><section class="header6 cid-qQMGPAEyvx mbr-fullscreen mbr-parallax-background" id="header6-h">
+<section class="engine"><a href="https://mobirise.me/h">how to create a web page for free</a></section><section class="header6 cid-qQMGPAEyvx mbr-fullscreen mbr-parallax-background" id="header6-h">
 
     
 
@@ -316,7 +312,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="SaDsuncPxXm0ZdCso3DFPnK7BtbWszzOZzWBZnAsrygEX4lnMTZ89qn/duherjbngyhJBQGd1i1GsUT193X109HxTuAkV/Ka98k4NvVQUCo71VS/UBo8Cv/FAZiTfwYn" data-form-email="true">
+                        <input type="hidden" value="OSn1siCw3gj4PacdDtTluDu5+2eRs4xL2JAmcXNElLKNuSpZ4te0lqwVIjCsApz7j/0ATIbb4a+srzKJaipflv0+SOYlF9FBu0OC4XI2RTvLbxkhdDAZ34J0hrZzjU9q" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-j">
                         </div>
